Fix the last bug related to the selection crossing months.

I already fixed this bug some months ago, but it was for the navigator's back/forward arrows.
Now its fixed for the toolbar's Forward/Backward actions too.

BUG: 258866